==> DrRobotTech/drempower-wiki/4-库函数/stm32/UART版本/ascii协议（M系列）/DrEmpower.c <==
#include "DrEmpower.h"
#include <string.h>
#include <stdlib.h>
#include <math.h>
#include "stm32F1xx.h"
#include "usart.h"
#define INPUT_MODE_PASSTHROUGH 1
#define INPUT_MODE_VEL_RAMP 2
#define AXIS_STATE_IDLE 1
#define AXIS_STATE_CLOSED_LOOP_CONTROL 8
#define SERVO_USART huart1              /* 驱动电机使用的串口 */
#define SERVO_RECEIVE_TIMEOUT 1000        /* 串口接收超时(ms) */
#define ENABLE_INPUT_VALIDITY_CHECK 1   /* 输入合法性检查。为 0 时不编译空指针判断等检查，可减小程序体积、加快处理速度。 */
#define SERVO_MALLOC(size) malloc(size) /* 如果使用了操作系统，需要将这个函数换成操作系统对应的函数 */
#define SERVO_FREE(ptr) free(ptr)       /* 如果使用了操作系统，需要将这个函数换成操作系统对应的函数 */
#define SERVO_DELAY(n) HAL_Delay(n)     /* 如果使用了操作系统，需要将这个函数换成操作系统对应的函数 */
#define SERVO_SPRINTF sprintf           /* 使用这个函数需要在 Keil 里勾选 Use MicroLIB 或在 STM32CubeIDE 里勾选 Use float with printf from newlib-nano */
#define PRE_READ() __HAL_UART_FLUSH_DRREGISTER(&SERVO_USART)

void send_command(uint16_t strLength)
{
	
    HAL_UART_Transmit(&SERVO_USART, (uint8_t *)&command, strLength, 1000);
}

uint8_t read_data(uint8_t mode)
{
    rx_buffer[0] = '\0';
    HAL_StatusTypeDef status;
    for (uint16_t i = 0; i < sizeof(rx_buffer) / sizeof(rx_buffer[0]); i++)
    {
        status = HAL_UART_Receive(&SERVO_USART, rx_buffer + i, 1, SERVO_RECEIVE_TIMEOUT);
        if (mode == 0)
        {
            if (rx_buffer[i] == '\n') return 1;
            if (status != HAL_OK) return 0;
        }
        else if (mode == 1)
        {
            if (status == HAL_TIMEOUT) return rx_buffer[i];
            else if (status != HAL_OK) return 0;
        }
        else if (mode == 2){
            if (rx_buffer[i] == '\0') return 1;
            if (status != HAL_OK) return 0;
        }
    }
    return 0;
}
