==> DrRobotTech/drempower-wiki/4-库函数/arduino/Arduino_uart/ascii协议(M系列)/DrEmpower.cpp <==
#include "DrEmpower.h"
#include <string.h>
#include <stdlib.h>
#include <math.h>
#define INPUT_MODE_PASSTHROUGH 1
#define INPUT_MODE_VEL_RAMP 2
#define AXIS_STATE_IDLE 1
#define AXIS_STATE_CLOSED_LOOP_CONTROL 8
#define SERVO_RECEIVE_TIMEOUT 10        /* 串口接收超时(ms) */
#define ENABLE_INPUT_VALIDITY_CHECK 1   /* 输入合法性检查。为 0 时不编译空指针判断等检查，可减小程序体积、加快处理速度。 */
#define DTOSTRF_PREC 5
#define SERVO_MALLOC(size) malloc(size) /* 如果使用了操作系统，需要将这个函数换成操作系统对应的函数 */
#define SERVO_FREE(ptr) free(ptr)       /* 如果使用了操作系统，需要将这个函数换成操作系统对应的函数 */
#define SERVO_DELAY(n) delay(n)         /* 如果使用了操作系统，需要将这个函数换成操作系统对应的函数 */
#define SERVO_SPRINTF servo_sprintf     /* 如果无法使用 sprintf 输出浮点数，则要用精简版的 servo_sprintf 代替 */
#define PRE_READ() ({while (Serial.available()) Serial.read();})

void send_command(char *cmd)
{
  Serial.print(cmd);
  cmd[0] = '\0';
}

void send_command(size_t length)
{
  Serial.print(command);
  command[0] = '\0';
}

uint8_t read_data(uint8_t mode)
{
  rx_buffer[0] = '\0';
  unsigned long timeStart = millis();
  for (size_t i = 0; i < sizeof(rx_buffer) / sizeof(rx_buffer[0]); i++)
    {
    for (;;)
    {
      if (Serial.available()) break;
      if (millis() - timeStart > SERVO_RECEIVE_TIMEOUT){
        if (mode == 1) return rx_buffer[i < 1 ? 0 : 1];
        return 0;
      }
    }
    rx_buffer[i] = Serial.read();
    if (rx_buffer[i] == '\n' && mode == 0) return 1;
    else if (rx_buffer[i] == '\0' && mode == 2) return 1;
  }
  return 0;
}
